--- a/resume.tex
+++ b/resume.tex
@@ -41,14 +41,16 @@ Swarthmore College $\cdot$ 500 College Ave $\cdot$ Swarthmore, PA 19081 \\
 \textsc{\textbf{EDUCATION}}
 \end{mycenter}
 
+\vspace{-3mm}
 \rule{\textwidth}{0.4pt}
 
 \textbf{Swarthmore College}, Swarthmore, PA
 \begin{itemize}[topsep=0pt,noitemsep]
-  \item[\I] Current GPA: 3.7
-	\item[\I] Candidate for Bachelor of Arts in Honors Mathematics and Honors Minor Linguistics, May 2019
+  \item[\I] Current GPA: 3.66
+	\item[\I] Candidate for Bachelor of Arts in Honors Mathematics and Linguistics, May 2019
 	\item[\I] \textit{Relevant Coursework}: Algorithms, Natural Language Processing, Computer Systems, Data Structures \& Algorithms, Complex Analysis, Real Analysis, Modern Algebra, Honors Multivariable Calculus, Honors Linear Algebra, Geometry, Econometrics, Field Methods, Syntax, Semantics, Phonetics \& Phonology, Linguistic Typology
-	\item[\I] Member, Swarthmore Men's Soccer (Freshman -- Junior years, Centennial Conference Academic Honor Roll)
+	\item[\I] Member, Swarthmore Men's Varsity Soccer (Sophomore -- Junior years, Centennial Conference Academic Honor Roll)
+  \item[\I] Member, Swarthmore Men's Club Soccer (Freshman \& Senior years)
 	\item[\I] Member, Phi Psi Fraternity
 \end{itemize}
 
@@ -58,6 +60,7 @@ Swarthmore College $\cdot$ 500 College Ave $\cdot$ Swarthmore, PA 19081 \\
 \textsc{\textbf{WORK EXPERIENCE}}
 \end{mycenter}
 
+\vspace{-3mm}
 \rule{\textwidth}{0.4pt}
 
 \textbf{Google Summer of Code / Apertium}\\
@@ -82,7 +85,7 @@ Lab Assistant, Laboratory for Endangered Languages Research and Documentation \h
 Information Technical Services Associate \hfill June 2016 -- September 2016
 \begin{itemize}[topsep=0pt,noitemsep]
 	\item[\I] Worked with students, faculty, and staff to solve issues related to the College's technical services over the phone and in person
-  \item[\I] Delivered and configured telephones, computers, and printers around campus in faculty offices and public areas
+  \item[\I] Delivered and configured, computers, printers, and telephones in faculty offices and public areas throughout campus
 \end{itemize}
 
 Math Department Tutor and \lq\lq{Pi-rate,}\rq\rq{ }\textit{Swarthmore, PA} \hfill September 2016 -- December 2017
@@ -102,6 +105,7 @@ Sports Information Student Worker \hfill September 2015 -- present
 \textsc{\textbf{PERSONAL}}
 \end{mycenter}
 
+\vspace{-3mm}
 \rule{\textwidth}{0.4pt}
 
 \vspace{1.5mm}
