final draft of mozilla cover letter

--- a/cover-letters/mozilla.tex
+++ b/cover-letters/mozilla.tex
@@ -45,7 +45,7 @@
 
 To Whom It May Concern,
 
-I am writing to express by interest in applying for the Junior Software Engineer position at Mozilla.  I am currently a senior at Swarthmore College pursuing honors degrees in Mathematics \& Linguistics, which I hope to complete in May 2019.  In addition to experience within these disciplines, I also have extensive programming experience, as detailed on my r\'esum\'e.
+I am writing to express by interest in applying for the Junior Software Engineer position at Mozilla.  I am currently a senior at Swarthmore College pursuing honors degrees in Mathematics \& Linguistics, which I will finish in May 2019.  In addition to experience within these disciplines, I also have extensive programming experience, as detailed on my r\'esum\'e.
 
 As a premier organization in the online technology space, Mozilla provides an unparalleled opportunity to contribute meaningfully to how people experience the web.  In particular, Mozilla's guiding open source principles position it uniquely apart from other profit-driven hegemons it competes with.  I have recently become involved in the open source community with my work this past summer for a Google Summer of Code project, so I am already comfortable and familiar with this ethos.  Further, my experience with web technologies in general makes me a strong candidate for this position.  For example, in Summer 2017, I worked with the chair of my school's linguistics department to improve and maintain his website, which serves as an online repository for dying languages around the world.  In particular, it seeks to make the World Wide Web a more open and accessible space for under-resourced language communities, rather than the exclusive domain of official dialects of English, Spanish, Russian, etc.
 
