resume.tex: Update Skills section

--- a/resume.tex
+++ b/resume.tex
@@ -114,9 +114,9 @@ Sports Information Student Worker \hfill September 2015 -- present
 
 \hspace{-3mm}
 \textbf{Skills}: & Linux, macOS, Windows \\
-  & Proficient in JavaScript, Python, PHP, HTML \& CSS, \LaTeX, and Bash; previous experience with \\
-  & C++, C, SQL (SQLite3, PostgreSQL, MongoDB, MySQL), Stata, VBA, and TI-Basic \\
-  & AWS, Git, Docker, Heroku\\[1mm]
+  & Proficient in TypeScript, Java, Python, C++, HTML \& CSS, \LaTeX, and Bash; previous experience \\
+  & with PHP, C, SQL (SQLite3, PostgreSQL, MongoDB, MySQL), Stata, VBA, and TI-Basic \\
+  & AWS, Git, Ansible, Terraform, Packer, Docker, Heroku\\[1mm]
 
 \hspace{-3mm}
 \textbf{Interests}: & Playing music (guitar, ukulele, trumpet, piano); reading (critical theory, philosophy, history, \\
